# carote

./: .gitignore  CMakeLists.txt  README.md  YouBotOODLWrapper.patch  package.xml
carote_msgs/: CMakeLists.txt  package.xml
carote_msgs/msg/: OperatorStamped.msg
carote_pkg/: CMakeLists.txt  package.xml
carote_pkg/cfg/: Follower.cfg  Operator.cfg  Orbiter.cfg  Positioner.cfg
carote_pkg/include/carote/: Controller.h  Dynamics.h  Follower.h  Model.h  Operator.h  Orbiter.h  Positioner.h  Tweak.h  Utils.h
carote_pkg/launch/: controller.launch  operator.launch  setup.launch  target.launch  youbot.launch
carote_pkg/src/: CMakeLists.txt
carote_pkg/src/controller/: callbacks.cpp  commands.cpp  controller.cpp  goal.cpp  kinematics.cpp  poses.cpp  ros.cpp
carote_pkg/src/controllers/: follower.cpp  node.cpp  orbiter.cpp  positioner.cpp
carote_pkg/src/follower/: follower.cpp  node.cpp
carote_pkg/src/model/: chain.cpp  dynamics.cpp  joints.cpp  kinematics.cpp  model.cpp
carote_pkg/src/operator/: node.cpp  operator.cpp
carote_pkg/src/tools/: home.cpp  work.cpp
carote_pkg/src/tweak/: operator.cpp  target.cpp  tweak.cpp  tweak.hpp
cfg/: Calibration.cfg  Controller.cfg  Follower.cfg  Target.cfg  Tweak.cfg
include/carote/: Controller.h  FilterHoloborodko.h  FilterMean.h  Follower.h  Params.h  Target.h  Tweak.h
launch/: carote.launch  controller.launch  follower.launch  setup.launch  target.launch  youbot.launch
msg/: Operator.msg  OperatorStamped.msg
scripts/: controller.sh  make.sh  master.sh  pc.sh  robot.sh  scooby.sh  setup-controller.sh  setup-drivers.sh  setup-environment.sh  setup-master.sh  setup-operator.sh  setup-target.sh  setup.sh  youbot.sh
src/: CMakeLists.txt
src/controller/: callbacks.cpp  controller.cpp  follower.cpp  kinematics.cpp  node.cpp  poses.cpp  ros.cpp
src/filters/: Holorobodko.cpp  Mean.cpp
src/follower/: follower.cpp  node.cpp
src/tweak/: listener.cpp  node.cpp  publisher.cpp  tweak.cpp
