<?xml version="1.0"?>
<package>
	<name>carote_msgs</name>
	<version>0.0.0</version>
	<description>CAROTE teleoperation system</description>
	<maintainer email="ruiz@dis.uniroma1.it">manuel</maintainer>
	<license>LGPLv3</license>
	<url type="website">https://www.github.com/mruizve/carote</url>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>message_generation</build_depend>
	<build_depend>std_msgs</build_depend>

	<run_depend>message_runtime</run_depend>
	<run_depend>std_msgs</run_depend>
</package>
