<?xml version="1.0"?>
<package>
	<name>carote</name>
	<version>0.0.0</version>
	<description>CAROTE teleoperation system</description>
	<maintainer email="ruiz@dis.uniroma1.it">manuel</maintainer>
	<license>LGPLv3</license>
	<url type="website">https://www.github.com/mruizve/carote</url>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>brics_actuator</build_depend>
	<build_depend>carote_msgs</build_depend>
	<build_depend>dynamic_reconfigure</build_depend>
	<build_depend>kdl_parser</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>tf_conversions</build_depend>

	<run_depend>apriltags_ros</run_depend>
	<run_depend>carote_msgs</run_depend>
	<run_depend>dynamic_reconfigure</run_depend>
	<run_depend>message_runtime</run_depend>
	<run_depend>openni2_launch</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>youbot_driver_ros_interface</run_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->
	</export>
</package>
